# ComfyUI-3D-MeshTool

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
cache/: ply_cache.json  plydata_conversion.json
moduel/: MeshTool.py  file.py  getdata.py  mesh_class.py  other.py  ply.py  str_edit.py
nodes/: camera.py  convert.py  list_array.py  mesh_UV.py  mesh_basics.py  mesh_optimization.py  other.py  ply_basics.py  tensor_.py
